# aprs-ax25-from-scratch

./: README.md  pyproject.toml
notebooks/: aprs-deliverable.ipynb  ee179-lab2.ipynb  ee179-lab7.ipynb  notebook.ipynb
tests/: test_python_ax25_experiment.py
