[tool.poetry]
name = "python-ax25-experiment"
version = "0.1.0"
description = ""
authors = ["Thomas Toye <thomas@toye.io>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.3"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
numpy = "^1.20.1"
pyrtlsdr = "^0.2.92"
matplotlib = "^3.3.4"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
